# dkc-bro.nl

./: LICENCE_NL.md  README.md  changelog.md
dkc-bro-manager/src/poller/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
dkc-bro-manager/src/poller/app/: __main__.py  bhp_settings.py  schemas.py  utils.py
dkc-bro-manager/src/poller/app/clients/: __init__.py  bhp_client.py  manager_client.py
dkc-bro-processor/backend/: Dockerfile  Makefile  pyproject.toml  pytest.ini  start.sh
dkc-bro-processor/backend/app/: exceptions.py  main.py  rule_manager.py
dkc-bro-processor/backend/app/parsers/: bhrgt_parser.py  cpt_parser.py  gar_parser.py  gld_parser.py  gmw_parser.py  json_documentparser.py  xml_parser.py
dkc-bro-processor/backend/app/routers/: __init__.py  healthcheck.py  rule.py
dkc-bro-processor/backend/app/rules/: __init__.py  base_rule.py
dkc-bro-processor/backend/app/rules/bhrgt/: bhrgt2.py  bhrgt7.py  bhrgt8.py
dkc-bro-processor/backend/app/rules/cpt/: cpt1.py  cpt10.py  cpt11.py  cpt12.py  cpt13.py  cpt2.py  cpt2b.py  cpt3.py  cpt4.py  cpt4b.py  cpt5.py  cpt6.py  cpt6a.py  cpt7.py  cpt7a.py  cpt8.py  cpt8a.py  cpt9.py
dkc-bro-processor/backend/app/rules/gar/: gar6.py
dkc-bro-processor/backend/app/rules/gld/: gld3.py  gld4.py  gld6.py  gld7.py  gld8.py
dkc-bro-processor/backend/app/rules/gmw/: gmw10.py  gmw3.py  gmw4.py  (+4 more)
dkc-bro-processor/backend/app/schemas/: __init__.py  rule.py
dkc-bro-processor/backend/app/utils/: enums.py
dkc-bro-processor/backend/tests/: conftest.py
dkc-bro-processor/backend/tests/routers/: test_dummy.py
(+487 files in other folders)
