[project]
name = "dkc-bro-processor"
version = "0.1.0"
description = "Default template for PDM package"
authors = []
dependencies = [
    "fastapi>=0.111.1",
    "uvicorn>=0.30.5",
    "azure-core>=1.30.2",
    "aiohttp>=3.9.5",
    "secure>=0.3.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "pytest>=8.3.2",
    "numpy>=2.1.0",
    "lxml>=5.3.0",
    "pre-commit>=3.8.0",
    "python-multipart>=0.0.9",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "ruff>=0.5.2",
    "pytest>=8.3.2",
    "pyright>=1.1.377",
    "coverage>=6.7.1"
]

[tool.black]
line-length = 140

[tool.ruff]
line-length = 140

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']