[project]
name = "DKC-BRO Poller"
version = "0.1.0"
description = "Poller component for the DKC-BRO project"
authors = []
dependencies = [
    "pydantic>=2.9.1",
    "pytest>=8.3.3",
    "pydantic-settings>=2.5.2",
    "requests>=2.32.3",
]
requires-python = "==3.12.*"
readme = "README.md"


[tool.pdm]
distribution = false
